syntax = "proto3";
package metrics;

service Metrics {
    rpc ReqMetrics (MetricsRequest) returns (MetricsResponse);
}

message MetricsRequest {
    string command = 1;
}

message MetricsResponse {
    int64 thread_id = 1;
    int64 timestamp = 2;
    double cpu_usage = 3;
    int64 memory_rss = 4;
    int64 io_bytes_read = 5;
    int64 io_bytes_written = 6;
    int64 net_bytes_read = 7;
    int64 net_bytes_written = 8;
}